2.txt
error[E0308]: mismatched types
  --> src/event.rs:76:47
   |
76 |                 self.handle_modifiers_changed(*modifiers);
   |                      ------------------------ ^^^^^^^^^^ expected `ModifiersState`, found `Modifiers`
   |                      |
   |                      arguments to this method are incorrect
   |
note: method defined here
  --> src/event.rs:96:8
   |
96 |     fn handle_modifiers_changed(&mut self, modifiers: ModifiersState) {
   |        ^^^^^^^^^^^^^^^^^^^^^^^^            -------------------------

error[E0499]: cannot borrow `*self` as mutable more than once at a time
   --> src/camera/manager.rs:236:51
    |
200 |         let camera = self.camera.as_mut().unwrap(); // 已在上层检查过
    |                      ----------- first mutable borrow occurs here
...
203 |             match camera.frame() {
    |                   ------ first borrow later used here
...
236 |                         if let Err(restart_err) = self.restart_video_stream() {
    |                                                   ^^^^ second mutable borrow occurs here

Some errors have detailed explanations: E0308, E0499.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `mira` (lib) due to 2 previous errors

Caused by:
  process didn't exit successfully: `/home/runner/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/bin/rustc --crate-name mira --edition=2021 src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C opt-level=3 -C panic=abort -C linker-plugin-lto -C codegen-units=1 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=94e6371e45b6b216 -C extra-filename=-8680afd603bb4441 --out-dir /home/runner/work/Mira/Mira/target/release/deps -C strip=symbols -L dependency=/home/runner/work/Mira/Mira/target/release/deps --extern bytemuck=/home/runner/work/Mira/Mira/target/release/deps/libbytemuck-1be9779675ea0f43.rmeta --extern chrono=/home/runner/work/Mira/Mira/target/release/deps/libchrono-8ec6991c9ed2e944.rmeta --extern env_logger=/home/runner/work/Mira/Mira/target/release/deps/libenv_logger-060b1305b04807a4.rmeta --extern fern=/home/runner/work/Mira/Mira/target/release/deps/libfern-f39df39364bb7541.rmeta --extern image=/home/runner/work/Mira/Mira/target/release/deps/libimage-7f31f3e5c2f9605b.rmeta --extern log=/home/runner/work/Mira/Mira/target/release/deps/liblog-a84220e33289a820.rmeta --extern nokhwa=/home/runner/work/Mira/Mira/target/release/deps/libnokhwa-e0603cdc3df34f88.rlib --extern num_cpus=/home/runner/work/Mira/Mira/target/release/deps/libnum_cpus-ba6484c22f91d3d8.rmeta --extern serde=/home/runner/work/Mira/Mira/target/release/deps/libserde-f43034f153369057.rmeta --extern tokio=/home/runner/work/Mira/Mira/target/release/deps/libtokio-f09f81f617d744db.rmeta --extern toml=/home/runner/work/Mira/Mira/target/release/deps/libtoml-b18f8850f2598591.rmeta --extern wgpu=/home/runner/work/Mira/Mira/target/release/deps/libwgpu-80dfdcbe5caceed8.rmeta --extern winit=/home/runner/work/Mira/Mira/target/release/deps/libwinit-8da618a46d2c1549.rmeta -L native=/home/runner/work/Mira/Mira/target/release/build/mozjpeg-sys-d4a9e42bd2ced6cb/out` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
Error: Process completed with exit code 101.